test/compile_errors/err_regex_invalid_literal.w
//! expect-check-fail: invalid regex literal

fn main:
    let _ = /(/
